tests/lexer/invalid/test_identifier_too_long.src
VERY_LONG_IDENTIFIER_THAT_EXCEEDS_THE_MAXIMUM_ALLOWED_LENGTH_OF_TWO_HUNDRED_AND_FIFTY_FIVE_CHARACTERS_BY_ADDING_MORE_AND_MORE_TEXT_TO_MAKE_IT_EVEN_LONGER_UNTIL_IT_REACHES_A_POINT_WHERE_IT_IS_NO_LONGER_VALID_ACCORDING_TO_THE_LANGUAGE_SPECIFICATION_AND_SHOULD_BE_REJECTED_BY_THE_LEXER_WITH_AN_APPROPRIATE_ERROR_MESSAGE